[package]
name = "convert_to_json"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "0.8.18", features = ["asm-keccak", "map-fxhash"] }
bincode = "1.3.3"
flate2 = "1.0.35"
serde = "1.0.217"
serde_json = "1.0.135"
clap = { version = "4.5.26", features = ["derive"] }
color-eyre = "0.6.3"
pevm = { path = "../../crates/pevm", features = ["full"] } 